# Dexium-Framework

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md
Shaders/: 2D_fragment.glsl  2D_vertex.glsl  basicFrag.glsl
Tests/: Hello Rectangle.cpp  Sprite.cpp  reMain.cpp  sortKey  sortKey.cpp  texture.cpp  textureComm.cpp
Tests/subroutines/datetime/: main  main.cpp
config/: Linux.cmake  Windows.cmake
dexpak/: main.cpp
docs/: Changelogs.md  Open Tasks.md  TODO.md  landing.md
docs/src/: custom_header.html  getting_started.md  index.css  index.md  installation.md
include/: AssetManager.hpp  AssetManager.inl  Camera.hpp  Colour.hpp  Dexium.hpp  HashKey.hpp  Material.hpp  Mesh.hpp  Primitives.hpp  Shader.hpp  Sprite.hpp  SpriteAnimations.hpp  Texture.hpp  Textures.hpp  config.hpp  helpers.h  window.hpp
include/audio/: ALSoft_impl.hpp  AudioSubsystem.hpp  Effects.hpp  SoundCtx.hpp  Streaming.hpp
include/core/: AssetManager.hpp  AssetManager.inl  BitwiseFlag.hpp  Camera.hpp  Colour.h  Colour.hpp  Error.h  Error.hpp  Input.hpp  Layers.hpp  Material.hpp  Mesh.hpp  Model.hpp  Primitives.hpp  Reference.hpp  Renderer.h  Renderer.hpp  Resource.hpp  ResourcePool.hpp  Shader.hpp  Signal.hpp  Sprite.hpp  SpriteAnimations.hpp  Texture.hpp  Timer.hpp  Transform.h  VFS.hpp  WindowContext.hpp  config.hpp  helpers.h  helpers.hpp  versionControl.hpp  viewport.hpp  window.hpp  windowContext.hpp
include/metadata/: TextureConfig.hpp
include/renderer/: Command.hpp  Presets.hpp  RenderPass.hpp  RenderTarget.hpp  Renderer.hpp  viewport.hpp
include/utils/: BitwiseFlag.hpp  Colour.hpp  ID.hpp  Rect.hpp  Time.hpp
projectConfig/: ImGui.cmake  Linux.cmake  README.md
src/: AssetManager.cpp  Camera.cpp  Colour.cpp  Dexium.cpp  Material.cpp  Mesh.cpp  Primitives.cpp  Shader.cpp  Sprite.cpp  SpriteAnimations.cpp  Texture.cpp  Textures.cpp  main.cpp  window.cpp  worldBuilder.cpp
src/audio/: ALSoft_impl.cpp  AudioSubsystem.cpp  Effects.cpp  SoundCtx.cpp  Streaming.cpp
src/core/: AssetManager.cpp  Camera.cpp  Colour.cpp  Error.cpp  Input.cpp  Layers.cpp  Material.cpp  Mesh.cpp  Primitives.cpp  Renderer.cpp  Resource.cpp  Shader.cpp  Sprite.cpp  SpriteAnimations.cpp  Texture.cpp  Timer.cpp  Transform.cpp  VFS.cpp  WindowContext.cpp  helpers.cpp  main.cpp  viewport.cpp  window.cpp  windowContext.cpp
src/renderer/: Command.cpp  Presets.cpp  RenderPass.cpp  Renderer.cpp  viewport.cpp
src/utils/: ID.cpp  Time.cpp
